# Financial-Transactions

./: .FileManager.cpp.swp  CMakeLists.txt  ContoCorrente.cpp  ContoCorrente.h  FileManager.cpp  FileManager.h  ObjectNotFound.h  ObjectNotReady.h  README.md  Transazione.cpp  Transazione.h  Transazioni.txt  main.cpp
test/: test_ContoCorrente.cpp  test_FileManager.cpp  test_Transazione.cpp
